--- a/war/styles.css
+++ b/war/styles.css
@@ -47,6 +47,6 @@ button:hover:disabled{
 .results {
     font-family: 'Lato', sans-serif;
     font-size: 1.5em;
+    margin-left: .4em;
     padding-top: 1.5em;
-    clear: both;
 }
